
	* modules/clx/new-clx/clx.f, modules/clx/new-clx/configure.in:
	* modules/fastcgi/configure.in, modules/regexp/configure.in:
	* modules/rawsock/configure.in, modules/rawsock/rawsock.c:
	* modules/syscalls/configure.in, configure.in, m4/general.m4:
	* m4/rusage.m4: do not check for gnulib files
	* Makefile.devel (GNULIB_CORE): add sys_uio & socketlib (already
	present as dependencies)

2011-05-18  Sam Steingold  <sds@gnu.org>

	* makemake.in (SUBDIR_CFLAGS): add @NO_CXX@ because
	gnulib regexp and fnmatch cannot be compiled with C++

2011-05-17  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c, modules/berkeley-db/bdb.c:
	* modules/berkeley-db/configure.in, modules/syscalls/configure.in:
	* modules/fastcgi/fastcgi_wrappers.c, modules/gdbm/gdbm.c:
	* rawsock/rawsock.c, modules/rawsock/configure.in:
	no need to check and guard gnulib #include files and functions

2011-05-17  Sam Steingold  <sds@gnu.org>

	merge the wildcard module into syscalls; import gnulib into src only
	before: clisp:52,284k modules:14,136k src:25,876k
	after:  clisp:44,200k modules: 8,684k src:24,836k
	* Makefile.devel (MODULES): remove wildcard
	(GNULIB_USERS, MAKEFILE_IN): remove
	(gnulib-imported): import files into src/ only
	(GNULIB_CORE): import explicitly "unistd alloca-opt environ"
	which have been already included because of dependencies;
	also import lstat, stat, readlink
	* gnulib-tool.patch: remove
	* configure.in: rely on lstat, stat, readlink
	* makemake.in (GLLIB_A): no need for "_cl" suffix
	* pathname.d: lstat() is always present (from gnulib)
	* unix.d: readlink, lstat, gethostname come from gnulib
	* win32.d: gethostname comes from gnulib
	* m4/stat.m4: remove
	* modules/wildcard, modules/regexp/gl*, modules/syscalls/gl*: remove
	* modules/regexp/Makefile.in, modules/syscalls/Makefile.in:
	remove gnulib targets
	(GENERATED): remove libgnu_*.a
	(config.h): add target
	* modules/regexp/configure.in, modules/syscalls/configure.in:
	remove gnulib calls