@@ -1,39 +1,0 @@
-dnl -*- Autoconf -*-
-dnl Copyright (C) 1993-2008 Free Software Foundation, Inc.
-dnl This file is free software, distributed under the terms of the GNU
-dnl General Public License.  As a special exception to the GNU General
-dnl Public License, this file may be distributed as part of a program
-dnl that contains a configuration script generated by Autoconf, under
-dnl the same distribution terms as the rest of that program.
-
-dnl From Bruno Haible, Marcus Daniels, Sam Steingold.
-
-AC_PREREQ(2.57)
-
-AC_DEFUN([CL_PUTENV],
-[AC_REQUIRE([AC_GNU_SOURCE])
-dnl Not AC_CHECK_FUNCS(putenv) because it doesn't work when CC=g++.
-AC_CACHE_CHECK([for putenv], ac_cv_func_putenv, [
-AC_LINK_IFELSE(AC_LANG_PROGRAM([#include <stdlib.h>], [putenv("")]),
-ac_cv_func_putenv=yes, ac_cv_func_putenv=no)])
-if test $ac_cv_func_putenv = yes; then
-  AC_DEFINE(HAVE_PUTENV, 1, [Define if you have the putenv() function.])
-fi
-AC_CHECK_FUNCS(setenv unsetenv)dnl
-AC_CHECK_DECLS(environ,,,[#include <stdlib.h>
-#ifdef HAVE_UNISTD_H
-#include <unistd.h>
-#endif])
-if test "$ac_cv_func_unsetenv" = yes; then
-  AC_MSG_CHECKING(return value of unsetenv)
-  CL_PROTO_RET([#include <stdlib.h>],[int unsetenv(char*);],
-cl_cv_proto_unsetenv_ret,int,void)
-  AC_MSG_RESULT($cl_cv_proto_unsetenv_ret)
-  if test "$cl_cv_proto_unsetenv_ret" = int;
-  then cl_cv_proto_unsetenv_posix=1
-  else cl_cv_proto_unsetenv_posix=0
-  fi
-  AC_DEFINE_UNQUOTED(UNSETENV_POSIX,$cl_cv_proto_unsetenv_posix,
-  [define to 1 if the return type of unsetenv is int])
-fi
-])
